# iYMLegacy

./: .gitignore  ChangeLog  NEWS  README.md  autogen.sh  compile_commands.json  configure.ac  configure_example
AFNetworking/: AFHTTPClient.m  AFImageRequestOperation.m
cYandexMusic/: cYandexMusic.c  cYandexMusic.h  cYandexOAuth.c  cYandexOAuth.h  oauth.c  structures.c  structures.h  uuid4.c
libs/: libcurl.dylib  libssl.dylib
lproj/ru.lproj/: Localizable.strings
nibs/: YPPlayer.nib
src/: ActionSheet.h  ActionSheet.m  AppDelegate.h  AppDelegate.m  AudioPlayer.h  AudioPlayer.m  CCAudioPlayer.m  FavoritesViewController.h  FavoritesViewController.m  FeedViewController.h  FeedViewController.m  Info.plist  Item.h  Item.m  Makefile.am  PlayerController.h  PlayerController.m  PlayerViewController.h  PlayerViewController.m  PlaylistViewController.h  PlaylistViewController.m  PlaylistsViewController.h  PlaylistsViewController.m  QuickLookController.h  QuickLookController.m  RecentsViewController.h  RecentsViewController.m  RootViewController.h  RootViewController.m  SearchViewController.h  SearchViewController.m  SearchViewControllerDetail.h  SearchViewControllerDetail.m  TextEditViewController.h  TextEditViewController.m  TrackListViewController.h  TrackListViewController.m  YandexConnect.h  YandexConnect.m  YandexConnectOld.h  (+6 more)
